tests/ui/typeck/tag-that-dare-not-speak-its-name.stderr
error[E0308]: mismatched types
  --> $DIR/tag-that-dare-not-speak-its-name.rs:11:20
   |
LL |     let x : char = last(y);
   |             ----   ^^^^^^^ expected `char`, found `Option<_>`
   |             |
   |             expected due to this
   |
   = note: expected type `char`
              found enum `Option<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
